Added Reporting to drawer

--- a/pyVerein/app/templates/app/_drawer.html
+++ b/pyVerein/app/templates/app/_drawer.html
@@ -89,6 +89,18 @@
             {% if perms.tasks.view_tasks %}
             <hr class="mdc-list-divider">
             {% endif %}
+            {% if perms.reporting.view_report %}
+            <h3 class="mdc-list-group__subheader">{% trans 'Reporting' %}</h3>
+            {% endif %}
+            {% if perms.reporting.view_report %}
+            <a href="{% url 'reporting:list' %}" title="{% trans 'Reports' %}" class="mdc-list-item {% base_url_class 'reporting:list' 'mdc-list-item--activated'%}">
+                <span class="mdc-list-item__graphic fa fa-tasks" aria-hidden="true"></span>
+                <span class="mdc-list-item__text">{% trans 'Reports' %}</span>
+            </a>
+            {% endif %}
+            {% if perms.reporting.view_report %}
+            <hr class="mdc-list-divider">
+            {% endif %}
             <h3 class="mdc-list-group__subheader">{% trans 'User' %}</h3>
             <a href="{% url 'account:detail' %}" title="{% trans 'Profile' %}" class="mdc-list-item {% base_url_class 'account:detail' 'mdc-list-item--activated'%}">
                 <span class="mdc-list-item__graphic fa fa-user" aria-hidden="true"></span>
