--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -89,7 +89,7 @@
                 {% for message in messages %}
                     {
                         tags: "{{ message.tags }}",
-                        message: "{{ message }}"
+                        message: "{{ message|escapejs }}"
                     },
                 {% endfor %}
             ];
