--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -99,6 +99,11 @@ div.dataTables_wrapper div.dataTables_filter {
     margin-right: 0px; }
   .form .form-group .mdc-text-field.mdc-text-field--textarea {
     margin-top: 20px; }
+  .form .form-group > label {
+    color: rgba(0, 0, 0, 0.6);
+    left: 16px;
+    display: inline-block;
+    position: relative; }
 
 .form .spacer {
   width: 50%;
