--- a/material.io/sass/material.scss
+++ b/material.io/sass/material.scss
@@ -27,7 +27,7 @@ $mdc-typography-styles-button: (
 @import "@material/menu-surface/mdc-menu-surface";
 @import "@material/menu/mdc-menu";
 
-.mdc-list-item{
+.mdc-drawer__content .mdc-list-item{
     a{
         width: 100%;
         height: 100%;
@@ -76,4 +76,8 @@ a.mdc-fab{
 
 .mdc-text-field{
     @include mdc-text-field-fill-color($mdc-theme-background)
+}
+
+.mdc-form-field{
+    font-size: 1rem;
 }
