--- a/pyVerein/finance/templates/finance/creditor/list.html
+++ b/pyVerein/finance/templates/finance/creditor/list.html
@@ -88,7 +88,7 @@
             $('#creditorlist_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
             });
-            $('tr').click(function () {
+            $('tbody tr').click(function () {
                 window.open($(this).data('creditor'));
             });
         })
