--- a/pyVerein/finance/templates/finance/debitor/list.html
+++ b/pyVerein/finance/templates/finance/debitor/list.html
@@ -20,12 +20,24 @@
     <table id="debitorlist" class="mdl-data-table dataTable"
             cellspacing="0"
             width="100%">
-        <thead>
-            <tr>
-                <th>{% trans 'Debitor number' %}</th>
-                <th>{% trans 'Debitor name' %}</th>
-            </tr>
-        </thead>
+            <thead>
+                    <tr>
+                        <th class="mdl-data-table__cell--non-numeric">{% trans 'Debitor number' %}</th>
+                        <th class="mdl-data-table__cell--non-numeric">{% trans 'Debitor name' %}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for debitor in debitors %}
+                        <tr data-debitor="{% url 'finance:debitor_detail' pk=debitor.pk %}">
+                            <td class="mdl-data-table__cell--non-numeric">
+                                {{ debitor.number}}
+                            </td>
+                            <td class="mdl-data-table__cell--non-numeric">
+                                {{ debitor.name }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
     </table>
     <a href ="{% url 'finance:debitor_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}" target="_blank">
         <i class="mdc-fab__icon fa fa-plus"></i>
@@ -41,8 +53,7 @@
                 $('#debitorlist').css('opacity', processing ? '0.3' : '1.0');
             }).DataTable({
                 "processing": true,
-                "serverSide": true,
-                "ajax": "{% url 'finance:debitor_apiList' %}",
+                "serverSide": false,
                 "language": {
                     "sProcessing": "<i class='fa fa-spin fa-spinner fa-3x'></i>",
                     "sEmptyTable": "{% trans 'sEmptyTable' %}",
@@ -63,26 +74,7 @@
                         "sSortAscending": "{% trans 'sSortAscending' %}",
                         "sSortDescending": "{% trans 'sSortDescending' %}"
                     }
-                },
-                "processing":
-                    true,
-                "columns":
-                    [
-                        {
-                            "data": "number",
-                            "className": "mdl-data-table__cell--non-numeric"
-                        },
-                        {
-                            "data": "name",
-                            "className": "mdl-data-table__cell--non-numeric"
-                        },
-                    ],
-                "createdRow":
-                    function (row, data, index) {
-                        $(row).click(function () {
-                            window.open(data.detail_url);
-                        });
-                    }
+                }
             });
             // Search
             $("#debitorlist_filter").html('<div class="mdc-text-field"><input type="text" id="datatable-search" class="mdc-text-field__input"><label class="mdc-floating-label" for="datatable-search">{% trans 'sSearch' %}</label><div class="mdc-line-ripple"></div></div>');
@@ -95,6 +87,9 @@
             $(".mdc-select select").addClass("mdc-select__native-control");
             $('#debitorlist_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
+            });
+            $('tbody tr').click(function () {
+                window.open($(this).data('debitor'));
             });
         })
         ;
