Impersonal account list header

--- a/pyVerein/finance/templates/finance/impersonal/list.html
+++ b/pyVerein/finance/templates/finance/impersonal/list.html
@@ -22,8 +22,8 @@
         width="100%">
         <thead>
             <tr>
-                <th class="mdl-data-table__cell--non-numeric">{% trans 'Debitor number' %}</th>
-                <th class="mdl-data-table__cell--non-numeric">{% trans 'Debitor name' %}</th>
+                <th class="mdl-data-table__cell--non-numeric">{% trans 'Impersonal account number' %}</th>
+                <th class="mdl-data-table__cell--non-numeric">{% trans 'Impersonal account name' %}</th>
             </tr>
         </thead>
         <tbody>
