--- a/pyVerein/finance/templates/finance/costobject/list.html
+++ b/pyVerein/finance/templates/finance/costobject/list.html
@@ -18,14 +18,26 @@
 
 {% block content %}
     <table id="costobjectlist" class="mdl-data-table dataTable"
-            cellspacing="0"
-            width="100%">
+        cellspacing="0"
+        width="100%">
         <thead>
             <tr>
-                <th>{% trans 'Cost object number' %}</th>
-                <th>{% trans 'Cost object name' %}</th>
+                <th class="mdl-data-table__cell--non-numeric">{% trans 'Cost object number' %}</th>
+                <th class="mdl-data-table__cell--non-numeric">{% trans 'Cost object name' %}</th>
             </tr>
         </thead>
+        <tbody>
+            {% for costobject in costobjects %}
+                <tr data-costobject="{% url 'finance:costobject_detail' pk=costobject.pk %}">
+                    <td class="mdl-data-table__cell--non-numeric">
+                        {{ costobject.number}}
+                    </td>
+                    <td class="mdl-data-table__cell--non-numeric">
+                        {{ costobject.name }}
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
     </table>
     <a href="{% url 'finance:costobject_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}" target="_blank">
         <i class="mdc-fab__icon fa fa-plus"></i>
@@ -41,8 +53,7 @@
                 $('#costobjectlist').css('opacity', processing ? '0.3' : '1.0');
             }).DataTable({
                 "processing": true,
-                "serverSide": true,
-                "ajax": "{% url 'finance:costobject_apiList' %}",
+                "serverSide": false,
                 "language": {
                     "sProcessing": "<i class='fa fa-spin fa-spinner fa-3x'></i>",
                     "sEmptyTable": "{% trans 'sEmptyTable' %}",
@@ -64,25 +75,6 @@
                         "sSortDescending": "{% trans 'sSortDescending' %}"
                     }
                 },
-                "processing":
-                    true,
-                "columns":
-                    [
-                        {
-                            "data": "number",
-                            "className": "mdl-data-table__cell--non-numeric"
-                        },
-                        {
-                            "data": "name",
-                            "className": "mdl-data-table__cell--non-numeric"
-                        },
-                    ],
-                "createdRow":
-                    function (row, data, index) {
-                        $(row).click(function () {
-                            window.open(data.detail_url);
-                        });
-                    }
             });
             // Search
             $("#costobjectlist_filter").html('<div class="mdc-text-field"><input type="text" id="datatable-search" class="mdc-text-field__input"><label class="mdc-floating-label" for="datatable-search">{% trans 'sSearch' %}</label><div class="mdc-line-ripple"></div></div>');
@@ -95,6 +87,9 @@
             $(".mdc-select select").addClass("mdc-select__native-control");
             $('#costobjectlist_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
+            });
+            $('tbody tr').click(function () {
+                window.open($(this).data('costobject'));
             });
         })
         ;
